# cs330_week6

./: .gitignore  .gitmodules  CMakeLists.txt
CS330_App/: CMakeLists.txt
CS330_App/assets/shaders/: basic_lighting.frag  basic_lighting.vert  basic_lit.frag  basic_lit.vert  basic_shader.frag  basic_shader.vert  light_cube.vert
CS330_App/include/: application.h  camera.h  game_object.h  light.h  material.h  mesh.h  model.h  point_light.h  pyramid.h  shader.h  shapes.h  texture.h  types.h
CS330_App/src/: application.cpp  camera.cpp  light.cpp  main.cpp  mesh.cpp  model.cpp  point_light.cpp  pyramid.cpp  shader.cpp  texture.cpp
